SEATGEEK API changed 'id' to 'event_id'

--- a/PYTHON TABLE JOIN.ipynb
+++ b/PYTHON TABLE JOIN.ipynb
@@ -77,9 +77,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       artist               artist_id available_elsewhere  capacity  \\\n",
+      "0  Ed Sheeran  6eUKZXaKkcviH0Ku9w2n3V                   0       NaN   \n",
+      "1  Ed Sheeran  6eUKZXaKkcviH0Ku9w2n3V                   0       NaN   \n",
+      "2  Ed Sheeran  6eUKZXaKkcviH0Ku9w2n3V                   0       NaN   \n",
+      "3  Ed Sheeran  6eUKZXaKkcviH0Ku9w2n3V                   0       NaN   \n",
+      "4  Ed Sheeran  6eUKZXaKkcviH0Ku9w2n3V                   0       NaN   \n",
+      "5  Ed Sheeran  6eUKZXaKkcviH0Ku9w2n3V                   0       NaN   \n",
+      "6  Ed Sheeran  6eUKZXaKkcviH0Ku9w2n3V                   0       NaN   \n",
+      "7  Ed Sheeran  6eUKZXaKkcviH0Ku9w2n3V                   0       NaN   \n",
+      "8       Drake  3TVXtAsR1Inumwj472S9r4                   0       NaN   \n",
+      "9       Drake  3TVXtAsR1Inumwj472S9r4                   0       NaN   \n",
+      "\n",
+      "            city      create_ts       date_UTC  highest_price           id  \\\n",
+      "0       Rochdale  1557862987000  1568480400000           0.00  58428881357   \n",
+      "1       Cwmbwrla  1557862987000  1564259400000           5.98  61455218212   \n",
+      "2      Barcelona  1557862987000  1559934000000         166.34  61901013598   \n",
+      "3           Roma  1557862987000  1560625200000           0.00  61651091073   \n",
+      "4      Badsworth  1557862987000  1560535200000          29.55  57782774835   \n",
+      "5        Wrexham  1557862987000  1559412000000          16.10  61236603329   \n",
+      "6    Southampton  1557862987000  1561833000000          43.23  55400619745   \n",
+      "7        Potenza  1557862987000  1560668400000           0.00  60663944491   \n",
+      "8  Slippery Rock  1557862987000  1565049600000           0.00  60132885078   \n",
+      "9     Cincinnati  1557862987000  1570188600000          60.00  57274902776   \n",
+      "\n",
+      "   lowest_price                                               name shareable  \\\n",
+      "0          0.00                             Ed Sheeran Experience          1   \n",
+      "1          5.98                The definite tribute to ed Sheeran          1   \n",
+      "2        166.34                     concierto ed sheeran barcelona         0   \n",
+      "3          0.00                  Ed Sheeran Night - The Yellow Bar         1   \n",
+      "4         29.55                  Daniel East Tribute to Ed Sheeran         1   \n",
+      "5         11.32         ED SHEERAN TRIBUTE- MOJO Nightclub Wrexham         1   \n",
+      "6         43.23          Minstead Trust's Ed Sheeran Tribute Night         1   \n",
+      "7          0.00  Eventi in Bus - ED SHEERAN - Roma - Stadio Oli...         0   \n",
+      "8          0.00               Drake Oranwood: Troubadour Next Door         1   \n",
+      "9         30.00  Respiratory Care Conference 2019 at Daniel Dra...         1   \n",
+      "\n",
+      "  sold_out    state                                      venue  \n",
+      "0        1  England                                 The Empire  \n",
+      "1        0    Wales          Mecca Bingo Swansea Carmarthen Rd  \n",
+      "2        0       CT              Estadi Olímpic Lluís Companys  \n",
+      "3        0    Lazio                           Via Palestro, 40  \n",
+      "4        0  England  Best Western Plus Rogerthorpe Manor Hotel  \n",
+      "5        0    Wales                     Mojo Nightclub Wrexham  \n",
+      "6        0  England   Hotel Mercure Southampton Centre Dolphin  \n",
+      "7        0       PZ             Di fronte la STAZIONE CENTRALE  \n",
+      "8        1       PA                                Pennsic War  \n",
+      "9        0       OH                                 Cincinnati  \n"
+     ]
+    }
+   ],
    "source": [
     "# IMPORT EVENTBRITE\n",
     "s3_client = boto3.client('s3')\n",
@@ -88,12 +142,13 @@
     "response = s3_client.get_object(Bucket=bucket, Key=key)\n",
     "event_dict = (response['Body'].read())\n",
     "event_json = json.loads(event_dict.decode('utf8'))\n",
-    "eventbrite_event_df = pd.DataFrame.from_dict(event_json)"
+    "eventbrite_event_df = pd.DataFrame.from_dict(event_json)\n",
+    "print(eventbrite_event_df.head(10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,12 +164,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "stubhub_test_df = stubhub_event_df.sort_values(by=['artist', 'date_UTC']).head(10000)\n",
-    "ticketmaster_test_df = ticketmaster_event_df.sort_values(by=['artist', 'date_UTC']).head(10000)"
+    "ticketmaster_test_df = ticketmaster_event_df.sort_values(by=['artist', 'date_UTC']).head(10000)\n",
+    "eventbrite_test_df = eventbrite_event_df.sort_values(by=['artist', 'date_UTC']).head(10000)\n",
+    "seatgeek_test_df = seatgeek_event_df.sort_values(by=['artist', 'date_UTC']).head(10000)"
    ]
   },
   {
@@ -601,35 +658,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['ID',\n",
-       " 'artist',\n",
-       " 'artist_id',\n",
+       "['artist',\n",
+       " 'average_price',\n",
+       " 'capacity',\n",
        " 'city',\n",
        " 'create_ts',\n",
        " 'date_UTC',\n",
-       " 'event_id',\n",
        " 'highest_price',\n",
+       " 'id',\n",
        " 'listing_count',\n",
        " 'lowest_price',\n",
+       " 'median_price',\n",
        " 'name',\n",
        " 'state',\n",
-       " 'ticket_count',\n",
        " 'venue']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(stubhub_test_df.columns)"
+    "list(seatgeek_test_df.columns)"
    ]
   },
   {
