Executing Athena Queries in PYTHON BOIII

--- a/PYTHON TABLE JOIN.ipynb
+++ b/PYTHON TABLE JOIN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,6 @@
     "import base64\n",
     "import datetime\n",
     "from datetime import datetime\n",
-    "import easydict\n",
     "from collections import defaultdict\n",
     "import pickle\n",
     "import pprint\n",
@@ -148,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,14 +163,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "stubhub_test_df = stubhub_event_df.sort_values(by=['artist', 'date_UTC']).head(10000)\n",
     "ticketmaster_test_df = ticketmaster_event_df.sort_values(by=['artist', 'date_UTC']).head(10000)\n",
     "eventbrite_test_df = eventbrite_event_df.sort_values(by=['artist', 'date_UTC']).head(10000)\n",
-    "seatgeek_test_df = seatgeek_event_df.sort_values(by=['artist', 'date_UTC']).head(10000)"
+    "seatgeek_test_df = seatgeek_event_df.sort_values(by=['Artist', 'date_UTC']).head(10000)"
    ]
   },
   {
@@ -658,35 +657,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['artist',\n",
-       " 'average_price',\n",
-       " 'capacity',\n",
+       "['ID',\n",
+       " 'artist',\n",
+       " 'artist_id',\n",
        " 'city',\n",
        " 'create_ts',\n",
        " 'date_UTC',\n",
+       " 'event_id',\n",
        " 'highest_price',\n",
-       " 'id',\n",
        " 'listing_count',\n",
        " 'lowest_price',\n",
-       " 'median_price',\n",
        " 'name',\n",
        " 'state',\n",
+       " 'ticket_count',\n",
        " 'venue']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(seatgeek_test_df.columns)"
+    "list(stubhub_test_df.columns)"
    ]
   },
   {
@@ -713,7 +712,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
